制作了简单的布局

--- a/MediumERP/Views/ErpHome/Index.cshtml
+++ b/MediumERP/Views/ErpHome/Index.cshtml
@@ -1,6 +1,9 @@
 ﻿@{
     Layout = "~/Views/Shared/_ErpLayoutPage.cshtml";
 }
+@{
+    ViewBag.Title = "首页";
+}
 <div>
     <p>我的第一个ERP页面</p>
 </div>
