--- a/MediumERP/Views/Shared/_ErpLayoutPage.cshtml
+++ b/MediumERP/Views/Shared/_ErpLayoutPage.cshtml
@@ -10,6 +10,7 @@
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
     <link href="~/Content/bootstrap.min.css" rel="stylesheet" />
+    <link href="~/Content/Site.css" rel="stylesheet" />
 </head>
 <body>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
